--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,14 @@ img {
     text-transform: uppercase;
 }
 
+#preloader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff url('../img/preloader.gif') no-repeat center;
+    z-index: 9999;
+}
+
 
 /* #header {
     &-home {
